# render-engine-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  fibonacci_offset.py  fibonacci_offsets.txt  noise.py
.cargo/: config.toml
Header/: Model.hpp  Object.hpp  Scene.hpp  Texture.hpp  Triangle.hpp  global.hpp  light.hpp
Source/: Model.cpp  Scene.cpp  Texture.cpp  Triangle.cpp  directional_light.cpp  light.cpp  main.cpp  spot_light.cpp
render-app/: Cargo.toml  build.rs
render-app/src/: main.rs
render-app/src/camera/: mod.rs
render-app/src/light/: mod.rs
render-app/src/ui/: main.slint  mod.rs
render-app/src/ui/mod/: global.slint  style.slint  util.slint
render-app/src/ui/pages/: add-light.slint  manage-light.slint
render-app/src/ui/widgets/: app-window.slint  panel.slint  side-bar.slint
render-lib/: Cargo.toml
render-lib/src/: lib.rs
render-lib/src/rasterization/: directional_light.rs  light.rs  mod.rs  model.rs  scene.rs  shader.rs  spot_light.rs  texture.rs  triangle.rs  unsafe_pack.rs
render-lib/src/ray_tracing/: mod.rs
render-lib/src/util/: math.rs  mod.rs
